--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-hook-form": "^7.48.2",
     "react-intersection-observer": "^9.5.3"
   },
   "devDependencies": {
