--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "axios": "^1.5.1",
+    "dompurify": "^3.0.6",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
